--- a/Proposal.tex
+++ b/Proposal.tex
@@ -61,7 +61,8 @@
 \author{
 \large
 \textsc{RHWE (Robin) van der Weide}\thanks{Supervisor: Joep de Ligt, PhD}\\[2mm] % Your name
-\normalsize   Cancer Stem cells \& Developmental biology \\ % Your institution
+\normalsize   BSc. Biology \\ % Your institution
+\normalsize   MSc. Cancer Stem cells \& Developmental biology (hons)\\ % Your institution
 \normalsize  Utrecht Graduate School of Life Sciences \\ % Your institution
 %\normalsize \href{mailto:john@smith.com}{john@smith.com} % Your email address
 \vspace{-5mm}
