Minor markup change

--- a/Proposal.tex
+++ b/Proposal.tex
@@ -85,8 +85,7 @@
 %----------------------------------------------------------------------------------------
 %	ABSTRACT
 %----------------------------------------------------------------------------------------
-\newpage
-\mbox{   }
+
 \newpage
 \renewcommand{\abstractname}{\begin{center}
 Summary of the research
@@ -165,7 +164,7 @@ Compared to other relational database management systems, RDF is completely flex
 
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{rdf}
+    \includegraphics[width=0.75\textwidth]{rdf.pdf}
     \caption{\textbf{General outline of RDF.} Two triples (as shown in \textbf{A}) can be linked by their common subjects (as shown in \textbf{B}), one can infer the relationship between the two objects via the predicates and find patterns: a gene, responsible for calcium ion binding, has a low phosphorylation level in the investigated sample.}
     \label{fig:rdf}
 \end{figure}
@@ -176,7 +175,7 @@ The JavaScript library "Data-Driven Documents" (\textit{D3.js}) is focussed on s
 \medskip
 \begin{figure}[H]
     \centering
-    \includegraphics[width=0.75\textwidth]{nyeplot}
+    \includegraphics[width=0.75\textwidth]{nyeplot.pdf}
     \caption{\textbf{Visual analytics in d3.js of mutli-sample variants calls} This example shows the possibilities of d3.js and visual analytics: fast and efficient system-wide exploratory analysis of multiple datasets, including cross-talk between the different modules. An interactive version can be found on \url{www.domitry.com/gsoc/multi_pane2.html}.}
     \label{fig:nya}
 \end{figure}
@@ -204,7 +203,7 @@ Due to the affiliation with the University Medical Center Utrecht (UMCU), we are
 \medskip
 \begin{figure}[h!]
     \centering
-    \includegraphics[width=0.75\textwidth]{autoVSexplo}
+    \includegraphics[width=0.75\textwidth]{autoVSexplo.pdf}
     \caption{\textbf{Trade-offs between automated and explorative analysis.} By combining automated analyses, where appropriate, with the background and intuition of the user, an optimal amount of effectivity can be attained. Picture taken from \citet{Keim}.}
     \label{fig:ae}
 \end{figure}
