--- a/Proposal.tex
+++ b/Proposal.tex
@@ -60,10 +60,10 @@
 
 \author{
 \large
-\textsc{RHWE (Robin) van der Weide}\thanks{Supervisor: Joep de Ligt, PhD}\\[2mm] % Your name
-\normalsize   BSc. Biology \\ % Your institution
-\normalsize   MSc. Cancer Stem cells \& Developmental biology (hons)\\ % Your institution
-\normalsize  Utrecht Graduate School of Life Sciences \\ % Your institution
+\textsc {RHWE (Robin) van der Weide}\thanks{Supervisor: Joep de Ligt, PhD}\\[2mm] 
+\normalsize  BSc. Biology
+\normalsize  MSc. Cancer Stem cells \& Developmental biology (hons)
+\normalsize  Utrecht Graduate School of Life Sciences 
 %\normalsize \href{mailto:john@smith.com}{john@smith.com} % Your email address
 \vspace{-5mm}
 }
@@ -90,14 +90,14 @@
 \renewcommand{\abstractname}{\begin{center}
 Summary of the research
 \end{center}}    % clear the title
+
 \begin{abstract}
 \noindent
-To date, studies on non-coding regions of the genome, specifically in cancer, have been limited. This is mainly due to the complex nature of putative functional elements in these regions. In parallel with the ENCODE-project, the interest in these regions has increased: researchers are beginning to study causal non-coding variations in cancer\cite{Benko2009,Kurth2009}. Due to the increase in popularity and cost-effectiveness of various omics-approaches, more and more data is becoming available. The complexity of integrating and analysing information of these approaches increases with every added omics-layer or dimension (e.g. time-series, treatments). When studying the effects of structural variants in non-coding regions in cancer, this complexity is further increased due to cancer-specific (e.g. heterogeneous samples, rapid evolution) and the multiple types and consequences of different structural variant-specific factors.
+To date, studies on non-coding regions of the genome, specifically in cancer, have been limited. This is mainly due to the complex nature of putative functional elements in these regions. Increased knowledge of these functions through efforts such as the ENCODE-project, enabled researchers to study causal non-coding variations in cancer\cite{Benko2009,Kurth2009}. Due to the increase in popularity and cost-effectiveness of various omics-approaches, more and more data is becoming available. The complexity of integrating and analysing information of these approaches increases with every added omics-layer or dimension (e.g. time-series, treatments). When studying the effects of structural variants in non-coding regions in cancer, this complexity is further increased due to cancer-specific (e.g. heterogeneous samples, rapid evolution) and the multiple types and consequences of different structural variant-specific factors.
 \medskip
 
 \noindent
-The current methods for integrating and analysing these layers and dimensions have two significant limitations in their design: scalability and generality (i.e. the possibility to add more levels or dimensions). Moreover, there isn't an option to overview a dataset without filtering, dividing or restructuring the data. 
-The integration of complex datasets is needed to understand the complex biology of cancer better\cite{Munoz2011}, but is restricted by these limitations.
+The current methods for integrating and analysing these layers and dimensions have two significant limitations in their design: scalability and generality (i.e. the possibility to add more levels or dimensions). Moreover, there isn't an option to overview a dataset without filtering, dividing or restructuring the data. The integration of complex datasets is needed to understand the complex biology of cancer better\cite{Munoz2011}, but is restricted by these limitations.
 \medskip
 
 \noindent Enter the Semantic Web and its Resource Description Framework (RDF). A simple and flexible framework for describing anything about anything.
